# ConvertorToJpeg

./: CMakeLists.txt  ConverterToJPEG.pro  ConverterToJPEG_ru_RU.ts  README.md  clickablelabel.cpp  converter.cpp  converter.h  heicconverter.cpp  main.cpp  mainwindow (1-я копия).ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h
